@@ -1,5 +1,11 @@
 Welcome to the NcX changelog
 
+
+Changelog from 20230702 > 20230801:
+• August security update
+• Added button grid in SystemUI options
+*NOTE: Re-installing Magisk may be necessary
+
 Changelog from 20230701 > 20230702:
 • Hot fix for NFC
 
